iptables.rules
# Generated by iptables-save v1.4.19.1 on Sat Jun  8 09:15:35 2013
*nat
:PREROUTING ACCEPT [106:10164]
:INPUT ACCEPT [1:84]
:OUTPUT ACCEPT [6:288]
:POSTROUTING ACCEPT [6:288]
-A POSTROUTING -s 192.168.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 192.168.3.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 172.16.0.0/24 -o eth0 -j MASQUERADE
COMMIT
# Completed on Sat Jun  8 09:15:35 2013
# Generated by iptables-save v1.4.19.1 on Sat Jun  8 09:15:35 2013
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [134:14192]
#Just for logging
#-A INPUT -i eth1 -m limit --limit 10/sec -j LOG --log-prefix "IPTables: "
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.0.0/16 -i eth0 -j DROP
-A INPUT -s 172.16.0.0/16 -i eth0 -j DROP
-A INPUT -s 192.168.0.0/24 -i eth1 -j ACCEPT
-A INPUT -s 172.16.0.0/16 -i eth2 -j ACCEPT
-A INPUT -s 192.168.0.0/24 -i ppp+ -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p udp -m udp --dport 67 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT 
-A INPUT -p udp -m udp --dport 53 -j ACCEPT 
-A INPUT -p udp -m udp --dport 123 -j ACCEPT 
-A INPUT -i eth0 -p tcp -m tcp --dport 1723 -j ACCEPT 
-A INPUT -i eth0 -p gre -j ACCEPT
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -s 10.0.0.0/8 -i ppp+ -j DROP
-A FORWARD -d 192.168.0.0/24 -j ACCEPT
-A FORWARD -d 172.16.0.0/16 -j ACCEPT
-A FORWARD -s 192.168.0.0/24 -j ACCEPT
-A FORWARD -s 172.16.0.0/16 -j ACCEPT

COMMIT
# Completed on Sat Jun  8 09:15:35 2013
